[tool.poetry]
name = "saucedemo-05"
version = "0.1.0"
description = ""
authors = ["Alexander_Dulalaev <camel1985@mail.ru>"]
readme = "README.md"
packages = [{include = "saucedemo_05"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
selenium = "^4.6.0"
webdriver-manager = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
